# DocTagger

./: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: INSTALLATION.md  USER_GUIDE.md
examples/: .env.example  .env.invoices  .env.lmstudio  doctagger.service
frontend/: README.md
frontend/app/: layout.tsx  page.tsx
frontend/components/: BatchProcessingPanel.tsx  DocumentList.tsx  DocumentListExplorer.tsx  FileExplorer.tsx  FileUpload.tsx  StatusCard.tsx
frontend/lib/: api.ts  hooks.ts  types.ts
src/doctagger/: __init__.py  cli.py  config.py  embedder.py  extractor.py  llm.py  metadata.py  models.py  normalizer.py  ocr.py  organizer.py  plugins.py  processor.py  server.py  storage.py  utils.py  watcher.py
tests/: test_config.py  test_models.py  test_normalizer.py
