[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doctagger"
version = "0.1.0"
description = "Automatically tag and organize PDF documents using local LLM"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DocTagger Contributors"}
]
dependencies = [
    "watchdog>=3.0.0",
    "ocrmypdf>=15.0.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "ollama>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
macos = [
    "pyobjc-framework-Cocoa>=9.0",
]
s3 = [
    "boto3>=1.28.0",
]
gcs = [
    "google-cloud-storage>=2.10.0",
]
azure = [
    "azure-storage-blob>=12.17.0",
    "azure-identity>=1.14.0",
]
cloud = [
    "boto3>=1.28.0",
    "google-cloud-storage>=2.10.0",
    "azure-storage-blob>=12.17.0",
    "azure-identity>=1.14.0",
]

[project.scripts]
doctagger = "doctagger.cli:main"
doctagger-server = "doctagger.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=doctagger --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
